Sat Aug  2 2014 Aleksey
	* option --exclude for skipping some files during recursive scanning

Fri Aug  1 2014 Aleksey
	* update the SHA3 algorithm to follow the changes of the FIPS 202 draft

Wed Jul 30 2014 Aleksey
	* support torrents with more than one announce url

Tue Jul 29 2014 Aleksey
	* LibRHash now exports torrent functions

Mon Jul 21 2014 Tsukasa Oi
	* fixed test_rhash.sh script failing on the en_US.UTF-8 locale

Wed Jul 16 2014 Aleksey
	* changed the `-p' format names of sha* families, see manpage
	* set a boolean in config to true by a string `true', `on' or `yes'

Sun Jul 13 2014 Aleksey
	* Ctrl-C now interrupts benchmarking

Wed Jul  2 2014 Aleksey
	* === Version 1.3.2 ===

Sat Jun 21 2014 Aleksey
	* report warnings on files locked by some processes

Thu Jun 19 2014 Brad Campbell
	* ignore non-regular files while scanning directories recursively

Wed Jun 18 2014 Aleksey
	* option --follow for following symlinks to directories

Sun Apr 13 2014 ZinnKid
	* BTIH piece length calculation updated to follow the uTorrent algorithm change

Wed Jan  8 2014 Aleksey
	* === Version 1.3.1 ===
	* Exclude the files specified by -o and -l from processing

Sat Jan  4 2014 Aleksey
	* Improved directory scanning

Sat Dec 28 2013 Aleksey
	* Bugfix: suppress the R6034 error popup on Windows

Fri Oct 25 2013 Aleksey
	* Fixed 'value too large' error on 32-bit Linux

Thu Sep 19 2013 Aleksey
	* Bugfix: corrected sha3-224 for big-endian processors

Tue Sep 17 2013 Aleksey
	* === Version 1.3.0 ===

Tue May 21 2013 Aleksey
	* Fixed output of percents when two or more files are hashed

Mon Apr 29 2013 Aleksey
	* Supported SHA3 (Keccak) hash function

Sat Apr 27 2013 Aleksey
	* Fixed memory leaks

Tue Apr 23 2013 Aleksey
	* Bugfix: %{mtime} formating option was broken

Mon Dec 31 2012 Aleksey
	* imported translations from Launchpad: de, es, gl, it

Tue Dec 25 2012 Aleksey
	* === Version 1.2.10 ===

Mon Nov  5 2012 Aleksey